Fix extra padding for multi view plots in all sizes

--- a/webview/src/plots/components/styles.module.scss
+++ b/webview/src/plots/components/styles.module.scss
@@ -186,7 +186,7 @@ $gap: 20px;
 }
 
 .plot.multiViewPlot {
-  aspect-ratio: var(--scale) - 1;
+  aspect-ratio: calc(0.8 * var(--scale) + 0.2);
   grid-column: span var(--scale);
 
   .largePlots & {
